k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
